[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/health-bar/bar_green.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/health-bar/bar_red.png" type="Texture" id=2]
[ext_resource path="res://src/actors/drones/Drone.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/particles/fly_particle.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0693

[sub_resource type="CircleShape2D" id=19]
radius = 17.3632

[sub_resource type="ParticlesMaterial" id=20]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=21]
radius = 11.4274

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle_damaged",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "dodge",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "dodge_touched",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle_touched",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "dodge_damaged",
"speed": 5.0
} ]

[node name="Drone" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 4 )
__meta__ = {
"_edit_vertical_guides_": [ 45.985 ]
}

[node name="BodyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="BodyShape" type="CollisionShape2D" parent="BulletDetector"]
shape = SubResource( 19 )

[node name="HealthBar" type="Position2D" parent="."]
position = Vector2( -32, -24 )

[node name="RedBar" type="Sprite" parent="HealthBar"]
texture = ExtResource( 2 )
centered = false

[node name="GreenBar" type="Sprite" parent="HealthBar"]
texture = ExtResource( 1 )
centered = false

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
lifetime = 0.3
speed_scale = 0.31
randomness = 0.4
local_coords = false
process_material = SubResource( 20 )
texture = ExtResource( 5 )

[node name="WorldDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="BodyShape" type="CollisionShape2D" parent="WorldDetector"]
shape = SubResource( 21 )

[node name="BodySprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 18 )
animation = "dodge_damaged"
playing = true
[connection signal="area_entered" from="BulletDetector" to="." method="_on_BulletDetector_area_entered"]
[connection signal="body_entered" from="WorldDetector" to="." method="_on_WorldDetector_body_entered"]
[connection signal="animation_finished" from="BodySprite" to="." method="_on_BodySprite_animation_finished"]
